main.css
html, body {
    overflow-x: hidden;
}

a.navbar-item:hover {
    background-color: inherit;
}

.is-menu-modal {
    width: 100vw;
    height: 200vh;
    padding: 10px;
    position: absolute;
    top: 52px;
}

.menu ul li {
    margin-bottom: 30px;
}

.custom-button-width {
    width: 60vw;
    max-width: 200px;
}

#mobile-menu {
    display: none;
}

.custom-hero-background {
    background-image: url('https://grindfusion-cdn.sirv.com/Images/wire.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-blend-mode: soft-light;
}

input[type="radio"] {
    position: relative;
    top: -4px;
}

.block-fields {
    display: block !important;
}

.custom-control {
    margin-bottom: 30px !important;
}

.radio + .radio {
    margin: 0;
}

.main-section {
    min-height: 80vh;
}

.footer {
    position: relative;
    left: 0;
    bottom: 0;
    height: 30vh;
    top: 30vh;
}

.footer .content {
    position: relative;
    top: 40px;

}

.margin-bottom-li {
    margin-bottom: 30px;
}

